Bug 197122 - file browser doesn't save view mode
Summary: file browser doesn't save view mode
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: general (show other bugs)
Version: 2.2-SVN
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Amarok Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-06-19 10:45 UTC by simon
Modified: 2009-06-20 11:23 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed In:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description simon 2009-06-19 10:45:29 UTC
Version:           2.2-SVN (using 4.2.90 (KDE 4.2.90 (KDE 4.3 Beta2)), Gentoo)
Compiler:          x86_64-pc-linux-gnu-gcc
OS:                Linux (x86_64) release 2.6.30-rc6-git3

hi,

it worked but is somehow broken now: i prefer the detail mode but it always starts with icon mode
Comment 1 Mikko C. 2009-06-19 10:48:59 UTC
it works just fine here, 2.2-svn
Comment 2 Myriam Schweingruber 2009-06-19 15:32:09 UTC
Please state your SVN revision when you report a bug for trunk. Makes it easier for us to track down :)
Comment 3 Mark Kretschmann 2009-06-19 20:26:15 UTC
Hmm this may be a regression. Doesn't remember the mode here either.
Comment 4 Mark Kretschmann 2009-06-20 11:23:50 UTC
SVN commit 984163 by markey:

Make the Files browser remember its view mode.

BUG: 197122

 M  +4 -0      FileBrowser.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=984163