Make the Files browser remember its view mode.

BUG: 197122

svn path=/trunk/extragear/multimedia/amarok/; revision=984163